feat: adding security api key option on docs
